# shadcn-egui-notedeck

crates/egui_shadcn/: AGENTS.md  COMPONENT_AUDIT.md  Cargo.toml  DESIGN_CHECKLIST.md  EGUI_CONFLICTS.md  INTEGRATION.md  README.md  STYLING_GAP_ANALYSIS.md  VISUAL_AUDIT.md  VISUAL_FIXES.md
crates/egui_shadcn/docs/: capture_screenshots.sh  index.md
crates/egui_shadcn/docs/components/: alert.md  avatar.md  badge.md  button.md  card.md  checkbox.md  dialog.md  input.md  kbd.md  progress.md  radio.md  separator.md  skeleton.md  slider.md  spinner.md  switch.md  tabs.md
crates/egui_shadcn/examples/: quickstart.rs  showcase.rs
crates/egui_shadcn/src/: animation.rs  lib.rs  notedeck.rs
crates/egui_shadcn/src/components/: .gitkeep  accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  date_picker.rs  dialog.rs  drawer.rs  dropdown_menu.rs  field.rs  form.rs  hover_card.rs  input.rs  kbd.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio.rs  resizable.rs  select.rs  separator.rs  sheet.rs  sidebar.rs  (+11 more)
crates/egui_shadcn/src/patterns/: .gitkeep
crates/egui_shadcn/src/theme/: colors.rs  mod.rs  radii.rs  shadows.rs  spacing.rs  typography.rs
