[package]
name = "egui_shadcn"
version = "0.1.0"
authors = ["shadcn-egui contributors"]
description = "shadcn/ui design system and components for egui"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/emilk/egui"
categories = ["gui", "game-development"]
keywords = ["gui", "egui", "shadcn", "components", "design-system"]

[lints]
workspace = true

[lib]

[features]
default = []

# Enable all components
all_components = []

# Individual component features (to be added as components are implemented)
badge = []
avatar = []
card = []
alert = []

[dependencies]
egui = { workspace = true, default-features = false }
emath = { workspace = true, default-features = false }
epaint = { workspace = true, default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
eframe = { workspace = true, default-features = true }
