[package]
name = "egui_shadcn"
version = "0.1.0"
authors = ["shadcn-egui contributors"]
description = "shadcn/ui design system and components for egui"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alltheseas/shadcn-egui-notedeck"
categories = ["gui", "game-development"]
keywords = ["gui", "egui", "shadcn", "components", "design-system"]

[lib]

[features]
default = []

# Enable all components
all_components = []

# Individual component features (to be added as components are implemented)
badge = []
avatar = []
card = []
alert = []

[dependencies]
egui = { version = "0.33.3", default-features = false }
emath = { version = "0.33.3", default-features = false }
epaint = { version = "0.33.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
eframe = { version = "0.33.3", default-features = true }
